# pyospackage

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: release.yaml  release.yml  test.yml
docs/: conf.py  index.md
src/pyospackage_tyin98/: __init__.py  example.py
tests/unit/: test_example.py
