################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "pyospackage_tyin98"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
version = "0.1.0"

description = "individual assignment"
authors = [
    { name = "Tiantong Yin", email = "ytiantong98@gmail.com" },
]
license = "MIT"
requires-python = ">= 3.10" # Adjust based on the minimum version of Python that you support
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = []

[project.urls]
Homepage = "https://github.com/ytt246/pyospackage_tyin98"
"Source Code" = "https://github.com/ytt246/pyospackage_tyin98"
"Bug Tracker" = "https://github.com/ytt246/pyospackage_tyin98/issues"
Documentation = "https://github.com/ytt246/pyospackage_tyin98/blob/main/README.md"
Download = "https://pypi.org/project/pyospackage_tyin98/#files"

[project.optional-dependencies]
# The groups below should be in the [development-groups] table
# They are here now because hatch hasn't released support for them but plans to
# in Mid November 2025.
dev = [
    "hatch",
    "pre-commit",
]

docs = [
    "sphinx~=8.0",
    "myst-parser>=4.0",
    "pydata-sphinx-theme~=0.16",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx_design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
]

build = [
    "pip-audit",
    "twine",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]


################################################################################
# Tool Configuration
################################################################################

# Hatch is building your package's wheel and sdist
# This tells hatch to only include Python packages (i.e., folders with __init__.py) in the build.
# read more about package building, here:
# https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-distribution-files-sdist-wheel.html
[tool.hatch.build]
only-packages = true

# This tells Hatch to build the package from the src/ directory.
# Read more about src layouts here: https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
[tool.hatch.build.targets.wheel]
packages = ["src/pyospackage_tyin98"]



######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"] # Tells pytest what directory tests are in
markers = ["raises"] # Tells pytest to not raise a warning if you use @pytest.mark.raises

[tool.coverage.paths]
source = [
    "src/pyospackage_tyin98",
    "*/site-packages/pyospackage_tyin98",
]

[tool.coverage.run]
# Ensures code coverage is measured for branches (conditional statements with different outcomes) in your code.
branch = true
parallel = true

[tool.coverage.report]
# This configures the output test coverage report
exclude_lines = ["pragma: no cover"]
precision = 2


# Use UV to create Hatch environments
[tool.hatch.envs.default]
installer = "uv"

################################################################################
# Hatch Environments
################################################################################

#--------------- Build and check your package ---------------#

# This table installs the tools you need to test and build your package
[tool.hatch.envs.check]
description = """Test the installation the package."""
features = [
    "build",
]
detached = true

# This table installs created the command hatch run install:check which will build and check your package.
[tool.hatch.envs.build.scripts]
check = [
    "hatch build {args:--clean}",
    "twine check dist/*",
]

#--------------- Run tests ---------------#
[tool.hatch.envs.test]
description = """Run the test suite."""
features = [
    "tests",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=pyospackage_tyin98 --cov-report=term-missing --cov-report=xml}"

#--------------- Build and preview your documentation ---------------#

# This sets up a hatch environment with associated dependencies that need to be installed
[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
# Install optional dependency test for docs
features = [
    "docs",
]

# This table contains the scripts that you can use to build and serve your docs
# hatch run docs:build will build your documentation
# hatch run docs:serve will serve them 'live' on your computer locally
[tool.hatch.envs.docs.scripts]
build = ["sphinx-build {args:-W -b html docs docs/_build}"]
serve = ["sphinx-autobuild docs --watch src/pyospackage_tyin98 {args:-b html docs/_build/serve}"]



#--------------- Check security for your dependencies ---------------#

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
features = [
    "build",
]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]
